--- a/articles/dev-spaces/index.yml
+++ b/articles/dev-spaces/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 4ad9de80a77d054ef723d9ed5bd53e410c653baa
-ms.sourcegitcommit: cdf0e37450044f65c33e07aeb6d115819a2bb822
+ms.openlocfilehash: 5fc027e52d838a85e7b880e3dd0daf4438e850dc
+ms.sourcegitcommit: 5839af386c5a2ad46aaaeb90a13065ef94e61e74
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/01/2019
-ms.locfileid: "57195089"
+ms.lasthandoff: 03/18/2019
+ms.locfileid: "57852006"
 documentType: LandingData
 title: Azure Dev Spaces
 metadata:
@@ -25,7 +25,7 @@ sections:
     text: >-
       > [!IMPORTANT]
 
-      > Azure Dev Spaces finns för närvarande i en förhandsversion och stöds endast av AKS-kluster i regionerna **USA, östra**, **USA, östra 2**, **USA, centrala**, **USA, västra 2**, **Europa, västra**, **Asien, sydöstra**, **Kanada, centrala** och **Kanada, östra**. Förhandsversioner görs tillgängliga för dig under förutsättning att du godkänner [kompletterande användningsvillkor](https://azure.microsoft.com/support/legal/preview-supplemental-terms/). Vissa aspekter av funktionen kan ändras innan den är allmänt tillgänglig (GA).
+      > Azure Dev Spaces finns för närvarande i en förhandsversion och stöds endast av AKS-kluster i regionerna **USA, östra**, **USA, östra 2**, **USA, centrala**, **USA, västra 2**, **Europa, norra**, **Europa, västra**, **Asien, sydöstra**, **Kanada, centrala** och **Kanada, östra**. Förhandsversioner görs tillgängliga för dig under förutsättning att du godkänner [kompletterande användningsvillkor](https://azure.microsoft.com/support/legal/preview-supplemental-terms/). Vissa aspekter av funktionen kan ändras innan den är allmänt tillgänglig (GA).
 - title: Komma igång med Azure Dev Spaces
   items:
   - type: paragraph
