--- a/articles/azure-app-configuration/index.yml
+++ b/articles/azure-app-configuration/index.yml
@@ -1,15 +1,15 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: a8b9bde79e811805fc692628c2b9d718da8408c8
-ms.sourcegitcommit: bd15a37170e57b651c54d8b194e5a99b5bcfb58f
+ms.openlocfilehash: e9ec024387f635457f6d8f651cf3a8444ce50440
+ms.sourcegitcommit: 12d67f9e4956bb30e7ca55209dd15d51a692d4f6
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/07/2019
-ms.locfileid: "57547358"
+ms.lasthandoff: 03/20/2019
+ms.locfileid: "58226597"
 documentType: LandingData
-title: Dokumentation om Azure App Configuration (förhandsversion)
+title: Dokumentation om förhandsversionen av Azure App Configuration
 metadata:
   title: Dokumentation om Azure App Configuration – självstudier, API-referens
-  meta.description: Azure App Configuration is an Azure managed service that helps developers centralize their application configurations simply and securely.
+  meta.description: Azure App Configuration is a managed service that helps developers centralize their application configurations simply and securely.
   services: azure-app-configuration
   author: yegu-ms
   manager: balans
@@ -20,12 +20,12 @@ metadata:
   ms.date: 02/24/2019
   ms.author: yegu
 abstract:
-  description: Azure App Configuration är en hanterad Azure-tjänst som hjälper utvecklare att centralisera sina programkonfigurationer enkelt och säkert.
+  description: Azure App Configuration är en hanterad tjänst som hjälper utvecklare att centralisera sina programkonfigurationer enkelt och säkert.
 sections:
 - title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
-    text: 'Lär dig hur du utvecklar ditt första webbprogram med Azure App Configuration:'
+    text: 'Lär dig hur du utvecklar ditt första webbprogram med hjälp av Azure App Configuration:'
   - type: list
     style: icon48
     items:
@@ -49,7 +49,7 @@ sections:
         src: https://docs.microsoft.com/java/docs-ref-conceptual/media/spring.svg
       text: Java Spring
       href: /azure/azure-app-configuration/quickstart-java-spring-app
-- title: Steg för steg-självstudier
+- title: Stegvisa självstudier
   items:
   - type: paragraph
     text: Lär dig hur du skapar program med Azure App Configuration
