--- a/articles/azure-databricks/index.yml
+++ b/articles/azure-databricks/index.yml
@@ -1,14 +1,14 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 9c782f003903fd8eeb33067ce1d85c6a8ecef6e3
-ms.sourcegitcommit: 6135cd9a0dae9755c5ec33b8201ba3e0d5f7b5a1
+ms.openlocfilehash: 0a1c495362ef38723c61eace25ebb13ec9ed3a6a
+ms.sourcegitcommit: 2d0fb4f3fc8086d61e2d8e506d5c2b930ba525a7
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/31/2018
-ms.locfileid: "50416094"
+ms.lasthandoff: 03/18/2019
+ms.locfileid: "57883652"
 documentType: LandingData
 title: Dokumentation om Azure Databricks
 metadata:
-  title: Dokumentation om Azure Databricks – självstudier
+  title: Dokumentation om Azure Databricks
   description: Lär dig hur du använder Azure Databricks med snabbstarten och de andra länkarna här. Azure Databricks är en Apache Spark-baserad analysplattform som är optimerad för Microsoft Azures plattform för molntjänster.
   services: azure-databricks
   author: mamccrea
@@ -17,7 +17,7 @@ metadata:
   ms.date: 03/19/2018
   ms.author: mamccrea
 abstract:
-  description: Lär dig hur du använder Azure Databricks med snabbstarten och de andra länkarna här. Azure Databricks är en Apache Spark-baserad analysplattform som är optimerad för Microsoft Azures plattform för molntjänster. Databricks har utformats med grundarna av Apache Spark och är integrerat med Azure för att tillhandahålla konfiguration med ett klick, effektiva arbetsflöden och en interaktiv arbetsyta som möjliggör samarbete mellan dataanalytiker, dataingenjörer och affärsanalytiker.
+  description: Lär dig använda den Apache Spark-baserade analysplattformen Azure Databricks med enkel konfiguration, smidiga arbetsflöden och en interaktiv arbetsyta där datatekniker, dataingenjörer och affärsanalytiker kan samarbeta. Snabbstarter och självstudier visar hur du kommer igång med Azure Databricks och integrerar andra Azure-tjänster.
   aside:
     image:
       alt: 
