--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -282,12 +282,24 @@ items:
             href: app/profiler-servicefabric.md
           - name: Aktivera Profiler för en virtuell Azure-dator
             href: app/profiler-vm.md
+          - name: Profiler för Linux App Services (förhandsversion)
+            href: app/profiler-aspnetcore-linux.md
           - name: Profiler-inställningar
             href: app/profiler-settings.md
           - name: Spåra begäranden för profilering
             href: app/profiler-trackrequests.md
           - name: Profiler-felsökning
             href: app/profiler-troubleshooting.md
+        - name: Felsökning av ögonblicksbild
+          items:
+          - name: Översikt
+            href: app/snapshot-debugger.md
+          - name: Aktivera Snapshot Debugger en App Service
+            href: app/snapshot-debugger-appservice.md
+          - name: Aktivera Snapshot Debugger för andra miljöer
+            href: app/snapshot-debugger-vm.md
+          - name: Felsökning för Snapshot Debugger
+            href: app/snapshot-debugger-troubleshoot.md
         - name: Diagnostik
           href: ../application-insights/app-insights-azure-diagnostics.md
         - name: Förhandsgranskningar
@@ -305,7 +317,7 @@ items:
         - name: ASP.NET Core
           href: app/asp-net-core.md
           items:
-          - name: Profiler för Linux App Services
+          - name: Profiler för Linux App Services (förhandsversion)
             href: app/profiler-aspnetcore-linux.md
         - name: Konsolen
           href: app/console.md
@@ -1034,9 +1046,9 @@ items:
     href: https://stackoverflow.com/search?q=monitoring
   - name: Kodexempel
     href: https://azure.microsoft.com/resources/samples/?service=monitor
-ms.openlocfilehash: 84cda925280e7497b2538d958a841bba3fc48d60
-ms.sourcegitcommit: 8b41b86841456deea26b0941e8ae3fcdb2d5c1e1
+ms.openlocfilehash: 19b06e5e558bdeb903907e8db8d17fd2ee4eb288
+ms.sourcegitcommit: 5839af386c5a2ad46aaaeb90a13065ef94e61e74
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/05/2019
-ms.locfileid: "57341314"
+ms.lasthandoff: 03/19/2019
+ms.locfileid: "57897325"
