--- a/articles/cognitive-services/Content-Moderator/toc.yml
+++ b/articles/cognitive-services/Content-Moderator/toc.yml
@@ -8,7 +8,7 @@ items:
     expanded: true
 - name: Snabbstarter
   items:
-  - name: Komma igång
+  - name: Prova Content Moderator på webben
     href: quick-start.md
   - name: Använda klient-SDK
     items:
@@ -26,6 +26,10 @@ items:
   items:
   - name: Moderera bilder för e-handel
     href: ecommerce-retail-catalog-moderation.md
+  - name: Moderera Facebook-innehåll
+    href: facebook-post-moderation.md
+  - name: Video- och avskriftsmoderering
+    href: video-transcript-moderation-review-tutorial-dotnet.md
 - name: Begrepp
   items:
   - name: Bildmoderering
@@ -104,12 +108,6 @@ items:
       href: Review-Tool-User-Guide/Workflows.md
     - name: Visa instrumentpanel
       href: Review-Tool-User-Guide/View-Dashboard.md
-  - name: Första Content Moderator-appar
-    items:
-    - name: Innehållsmoderering på Facebook
-      href: facebook-post-moderation.md
-    - name: Video- och avskriftsmoderering
-      href: video-transcript-moderation-review-tutorial-dotnet.md
   - name: Exportera eller ta bort kontodata
     href: ./export-delete-data.md
   - name: Azure-webbseminarserie
@@ -160,9 +158,9 @@ items:
     href: https://azure.microsoft.com/global-infrastructure/services/
   - name: Azure-översikt
     href: https://azure.microsoft.com/global-infrastructure/services/?products=cognitive-services
-ms.openlocfilehash: c9f43e8598afc6e9fa68c24313ef862072d48e75
-ms.sourcegitcommit: e7312c5653693041f3cbfda5d784f034a7a1a8f1
+ms.openlocfilehash: cee9e6c585dfa65ccee5c0f4631b5efc81dde760
+ms.sourcegitcommit: 2d0fb4f3fc8086d61e2d8e506d5c2b930ba525a7
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/11/2019
-ms.locfileid: "54215379"
+ms.lasthandoff: 03/18/2019
+ms.locfileid: "57900717"
