--- a/articles/cognitive-services/Speech-Service/index.yml
+++ b/articles/cognitive-services/Speech-Service/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 9a99e7133b24d37af5ce36c717d03bb0fdae7da5
-ms.sourcegitcommit: 90c6b63552f6b7f8efac7f5c375e77526841a678
+ms.openlocfilehash: c68bf4cf8bcc50069f3741ac0f1746363c1f82ac
+ms.sourcegitcommit: 5839af386c5a2ad46aaaeb90a13065ef94e61e74
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/23/2019
-ms.locfileid: "56733579"
+ms.lasthandoff: 03/19/2019
+ms.locfileid: "57861816"
 documentType: LandingData
 title: Dokumentation om Speech Services
 metadata:
@@ -24,7 +24,7 @@ metadata:
   ms.author: erhopf
   ms.custom: seodec18
 abstract:
-  description: Lär dig hur du använder Speech Services och Speech för att lägga till stöd för talfunktioner till dina appar. Du kan använda Speech SDK för att lägga till funktionerna <i>tal till text</i> (taligenkänning/SR) <i>avsikt</i>, <i>översättning</i> och <i>text till tal</i> (text till tal) i dina appar. Taltjänsten har även ett REST API som fungerar med alla programmeringsspråk som kan göra HTTP-förfrågningar.
+  description: Lär dig hur du använder Speech Services och Speech för att lägga till stöd för talfunktioner till dina appar. Du kan använda Speech SDK för att lägga till funktionerna <i>tal till text</i> (taligenkänning/SR) <i>avsikt</i>, <i>översättning</i> och <i>text till tal</i> (text till tal) i dina appar. Speech Services har även REST-API:er som kan användas med alla programmeringsspråk som kan göra HTTP-begäranden.
 sections:
 - items:
   - type: list
