--- a/articles/container-registry/TOC.yml
+++ b/articles/container-registry/TOC.yml
@@ -62,26 +62,29 @@ items:
       href: container-registry-image-lock.md
     - name: Ta bort containeravbildningar
       href: container-registry-delete.md
-    - name: Innehållsförtroende (förhandsversion)
-      href: container-registry-content-trust.md
     - name: Uppgradera ett klassiskt register
       href: container-registry-upgrade.md
     - name: Använda ACR-webhooks
       href: container-registry-webhook.md
     - name: Lagringsplatser för Helm-diagram (förhandsversion)
       href: container-registry-helm-repos.md
-  - name: Autentisering
+  - name: Säkerhet och autentisering
     items:
+    - name: Begränsa åtkomst med virtuellt nätverk (förhandsversion)
+      href: container-registry-vnet.md
     - name: Översikt över autentisering
       href: container-registry-authentication.md
-    - name: Autentisering av tjänstens huvudnamn
-      href: container-registry-auth-service-principal.md
-    - name: Autentisering av hanterad identitet
-      href: container-registry-authentication-managed-identity.md
-    - name: Azure Container Instances
-      href: container-registry-auth-aci.md
-    - name: Azure Kubernetes Service (AKS)
-      href: container-registry-auth-aks.md
+      items:
+      - name: Autentisering av tjänstens huvudnamn
+        href: container-registry-auth-service-principal.md
+      - name: Autentisering av hanterad identitet
+        href: container-registry-authentication-managed-identity.md
+      - name: Autentisera från Azure Container Instances
+        href: container-registry-auth-aci.md
+      - name: Autentisera från Azure Kubernetes Service (AKS)
+        href: container-registry-auth-aks.md
+    - name: Innehållsförtroende (förhandsversion)
+      href: container-registry-content-trust.md
   - name: Bygga och korrigera
     items:
     - name: ACR-uppgifter
@@ -137,9 +140,9 @@ items:
     href: https://stackoverflow.com/questions/tagged/azure-container-registry
   - name: Videoklipp
     href: https://azure.microsoft.com/resources/videos/index/?services=container-registry&sort=newest
-ms.openlocfilehash: ef8f6b64129f9dd2f2959c89e93c34b9d90a62f7
-ms.sourcegitcommit: bd15a37170e57b651c54d8b194e5a99b5bcfb58f
+ms.openlocfilehash: 732c0f878df9b5d722571bf45e4afd76a3180ebb
+ms.sourcegitcommit: 5839af386c5a2ad46aaaeb90a13065ef94e61e74
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/07/2019
-ms.locfileid: "57541957"
+ms.lasthandoff: 03/18/2019
+ms.locfileid: "58138002"
