--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -433,6 +433,8 @@ items:
     items:
     - name: Aggregera
       href: data-flow-aggregate.md
+    - name: Ändra rad
+      href: data-flow-alter-row.md
     - name: Villkorsstyrd delning
       href: data-flow-conditional-split.md
     - name: Härledd kolumn
@@ -549,6 +551,8 @@ items:
       href: solution-templates-introduction.md
     - name: Kopiera filer från flera containrar
       href: solution-template-copy-files-multiple-containers.md
+    - name: Kopiera nya filer genom LastModifiedDate
+      href: solution-template-copy-new-files-lastmodifieddate.md
     - name: Masskopiera med kontrolltabellen
       href: solution-template-bulk-copy-with-control-table.md
     - name: Deltakopiera med kontrolltabellen
@@ -585,9 +589,9 @@ items:
     href: https://azure.microsoft.com/global-infrastructure/services/
   - name: Supportalternativ
     href: https://azure.microsoft.com/support/options/
-ms.openlocfilehash: 8c724971db16381bb327cca6a30c5b8d63cac2bc
-ms.sourcegitcommit: 1902adaa68c660bdaac46878ce2dec5473d29275
+ms.openlocfilehash: 32411c9ec042a8504ef08ece1359ea9e5ee7ebda
+ms.sourcegitcommit: 2d0fb4f3fc8086d61e2d8e506d5c2b930ba525a7
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/11/2019
-ms.locfileid: "57730757"
+ms.lasthandoff: 03/18/2019
+ms.locfileid: "57858902"
