--- a/articles/databox-online/TOC.yml
+++ b/articles/databox-online/TOC.yml
@@ -72,10 +72,24 @@ items:
       href: data-box-edge-system-requirements.md
     - name: Förstå begränsningar
       href: data-box-edge-limits.md
+    - name: Säkerhetsöversikt
+      href: data-box-edge-security.md
+    - name: Läs specifikationer
+      href: data-box-edge-technical-specifications-compliance.md
   - name: Gör så här för att
     items:
+    - name: Hantera beräkning
+      href: data-box-edge-manage-compute.md
     - name: Utveckla en C#-modul
       href: data-box-edge-create-iot-edge-module.md
+    - name: Hantera resurser
+      href: data-box-edge-manage-shares.md
+    - name: Hantera användare
+      href: data-box-edge-manage-users.md
+    - name: Hantera bandbreddsscheman
+      href: data-box-edge-manage-bandwidth-schedules.md
+    - name: Hantera energi, åtkomst och anslutning
+      href: data-box-edge-manage-access-power-connectivity-mode.md
     - name: Hantera via PowerShell
       href: data-box-edge-connect-powershell-interface.md
 - name: Resurser
@@ -86,9 +100,9 @@ items:
     href: https://azure.microsoft.com/services/storage/databox/edge/
   - name: Prissättning
     href: https://azure.microsoft.com/pricing/details/storage/databox/edge/
-ms.openlocfilehash: 0ce74b9b3000c04c7e94358c8c93bade74cfd81f
-ms.sourcegitcommit: bd15a37170e57b651c54d8b194e5a99b5bcfb58f
+ms.openlocfilehash: e9a8ba6e284a03b4be085aa59be7fa5ae0ab65e9
+ms.sourcegitcommit: 5839af386c5a2ad46aaaeb90a13065ef94e61e74
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/07/2019
-ms.locfileid: "57551336"
+ms.lasthandoff: 03/19/2019
+ms.locfileid: "57855120"
