--- a/articles/governance/blueprints/index.yml
+++ b/articles/governance/blueprints/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 7d0947450352907eb90af748e8ced4a8bea67471
-ms.sourcegitcommit: fcb674cc4e43ac5e4583e0098d06af7b398bd9a9
+ms.openlocfilehash: 3b47cc9db956f390789e557e42592a840fafd1c7
+ms.sourcegitcommit: 2d0fb4f3fc8086d61e2d8e506d5c2b930ba525a7
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/18/2019
-ms.locfileid: "56337893"
+ms.lasthandoff: 03/18/2019
+ms.locfileid: "57998542"
 documentType: LandingData
 title: Dokumentation om Azure Blueprint
 metadata:
@@ -18,7 +18,7 @@ metadata:
   ms.date: 10/30/2018
   ms.author: dacoulte
 abstract:
-  description: Med Azure Blueprint kan du distribuera och uppdatera molnmiljöer med en upprepningsbar process med sammansättningsbara artefakter som principer, rollbaserad åtkomstkontroll och Azure Resource Manager-mallar.
+  description: Med Azure Blueprints kan du distribuera och uppdatera molnmiljöer med en upprepningsbar process med sammansättningsbara artefakter som Azure Resource Manager-mallar för att tillhandahålla resurser, rollbaserade åtkomstkontroller och principer.
 sections:
 - title: Snabbstarter på 5 minuter
   items:
@@ -43,5 +43,5 @@ sections:
     style: cards
     className: cardsD
     items:
-    - title: REST-API
-      html: <p><a href="/rest/api/blueprints/">Skisser</a></p>
+    - title: REST
+      html: <p><a href="/rest/api/blueprints/">API-referens</a></p>
