--- a/articles/governance/policy/index.yml
+++ b/articles/governance/policy/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: db83cf4310cb4d74dcbbd290f650e4dcfc00c0c8
-ms.sourcegitcommit: fcb674cc4e43ac5e4583e0098d06af7b398bd9a9
+ms.openlocfilehash: e389eb01faff93c0e45c66cded41e94ac3730715
+ms.sourcegitcommit: 12d67f9e4956bb30e7ca55209dd15d51a692d4f6
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/18/2019
-ms.locfileid: "56343714"
+ms.lasthandoff: 03/20/2019
+ms.locfileid: "58226036"
 documentType: LandingData
 title: Dokumentation om Azure Policy
 metadata:
@@ -15,7 +15,7 @@ metadata:
   manager: carmonm
   ms.service: azure-policy
   ms.topic: landing-page
-  ms.date: 01/23/2019
+  ms.date: 03/16/2019
   ms.author: dacoulte
 abstract:
   description: Med Azure Policy kan du hantera och förebygga IT-problem med principdefinitioner som framtvingar regler och effekter för dina resurser. Med Azure Policy blir resurserna kompatibla med företagets standarder och serviceavtal.
@@ -29,7 +29,7 @@ sections:
     items:
     - image:
         alt: Azure Portal
-        src: ./media/portal.svg
+        src: https://docs.microsoft.com/media/common/i_portal.svg
       text: Azure Portal
       href: ./assign-policy-portal
     - image:
@@ -42,6 +42,11 @@ sections:
         src: ./media/cli.svg
       text: Azure CLI
       href: ./assign-policy-azurecli
+    - image:
+        alt: Resource Manager-mall
+        src: https://docs.microsoft.com/media/logos/logo_vs-code.svg
+      text: Resource Manager-mall
+      href: ./assign-policy-template
 - title: Steg för steg-självstudier
   items:
   - type: paragraph
@@ -50,15 +55,16 @@ sections:
     style: unordered
     items:
     - html: <a href="/azure/governance/policy/tutorials/create-and-manage">Skapa och hantera Azure Policy</a>
+    - html: <a href="/azure/governance/policy/tutorials/create-custom-policy-definition">Skapa en anpassad principdefinition</a>
 - title: Exempel
   items:
   - type: paragraph
-    text: Använd följande JSON-exempel för att skapa principdefinitioner i Azure.
+    text: Granska de tillgängliga exemplen för att få hjälp med att skapa principdefinitioner i Azure.
   - type: list
     style: unordered
     className: spaced noBullet
     items:
-    - html: <a href="/azure/governance/policy/samples/index">Azure PowerShell</a>
+    - html: <a href="/azure/governance/policy/samples/index">Exempel på index</a>
 - title: Referens
   items:
   - type: list
@@ -66,8 +72,8 @@ sections:
     className: cardsD
     items:
     - title: Kommandorad
-      html: <p><a href="/cli/azure/policy">Azure CLI</a></p>
-    - title: PowerShell
-      html: <p><a href="/powershell/module/az.resources/#policies">Azure PowerShell</a></p>
-    - title: REST-API
-      html: <p><a href="/rest/api/policy-insights/policyevents">Händelser</a></p><p><a href="/rest/api/policy-insights/policystates">Tillstånd</a></p><p><a href="/rest/api/resources/policyassignments">Tilldelningar</a></p><p><a href="/rest/api/resources/policydefinitions">Principdefinitioner</a></p><p><a href="/rest/api/resources/policysetdefinitions">Initiativdefinitioner</a></p><p><a href="/rest/api/policy-insights/policytrackedresources">Principspårade resurser</a></p><p><a href="/rest/api/policy-insights/remediations">Reparationer</a></p>
+      html: <p><a href="/cli/azure/policy">Azure CLI</a></p><p><a href="/powershell/module/az.resources/#policies">Azure PowerShell (Policy)</a></p><p><a href="/powershell/module/az.policyinsights#policy_insights">Azure PowerShell (Policy Insights)</a></p><p><a href="https://www.powershellgallery.com/packages/Az.GuestConfiguration">Azure PowerShell (gästkonfiguration)</a></p>
+    - title: Mallar för Resurshanteraren
+      html: <p><a href="/azure/templates/microsoft.authorization/policyassignments">Tilldelningar</a></p><p><a href="/azure/templates/microsoft.authorization/policydefinitions">Principdefinitioner</a></p><p><a href="/azure/templates/microsoft.authorization/policysetdefinitions">Initiativdefinitioner</a></p>
+    - title: REST
+      html: <p><a href="/rest/api/policy-insights/policyevents">Händelser</a></p><p><a href="/rest/api/policy-insights/policystates">Tillstånd</a></p><p><a href="/rest/api/resources/policyassignments">Tilldelningar</a></p><p><a href="/rest/api/resources/policydefinitions">Principdefinitioner</a></p><p><a href="/rest/api/resources/policysetdefinitions">Initiativdefinitioner</a></p><p><a href="/rest/api/policy-insights/policytrackedresources">Principspårade resurser</a></p><p><a href="/rest/api/policy-insights/remediations">Reparationer</a></p><p><a href="/rest/api/guestconfiguration/">Gästkonfiguration</a></p>
