--- a/articles/media-services/index.yml
+++ b/articles/media-services/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 0f249cfc604a31a29f6b2e3c0380e6591ec8b4e6
-ms.sourcegitcommit: 3a7c1688d1f64ff7f1e68ec4bb799ba8a29a04a8
+ms.openlocfilehash: 3b778caed10981923d424745d820bfe10c1ce553
+ms.sourcegitcommit: 5839af386c5a2ad46aaaeb90a13065ef94e61e74
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/17/2018
-ms.locfileid: "49378844"
+ms.lasthandoff: 03/19/2019
+ms.locfileid: "57903614"
 documentType: LandingData
 title: Dokumentation för Azure Media Services
 metadata:
@@ -18,7 +18,7 @@ metadata:
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 09-24-2018
+  ms.date: 03/11/2019
   ms.author: juliako
 abstract:
   description: >-
@@ -32,23 +32,28 @@ sections:
   - type: list
     style: cards
     className: cardsM
-    columns: 3
+    columns: 2
     items:
     - href: /azure/media-services/latest/
       html: <p>Lär dig att koda, strömma på begäran, sända live och analysera dina videor med Media Services v3.</p>
       image:
         src: media/index/AMSIcons-media_servicesV3.svg
       title: Azure Media Services v3
-    - href: /azure/media-services/previous/
-      html: <p>Lär dig att koda, strömma på begäran och sända videor live med Media Services v2.</p>
-      image:
-        src: media/index/AMSIcons-media_servicesV2.svg
-      title: Azure Media Services v2 (äldre version)
     - href: /azure/media-services/video-indexer/
       html: <p>Lär dig att indexera information i video- och ljudfiler med Video Indexer.</p>
       image:
         src: media/index/AMSIcons-media_analytics.svg
       title: Video Indexer
+    - href: /azure/media-services/previous/
+      html: <p>Lär dig att koda, strömma på begäran och sända videor live med Media Services v2.</p>
+      image:
+        src: media/index/AMSIcons-media_servicesV2.svg
+      title: Azure Media Services v2 (äldre version)
+    - href: /azure/cdn/
+      html: <p>Lär dig hur du använder CDN för att cachelagra statiska objekt och accelerera dynamiskt innehåll som inte kan cachelagras.</p>
+      image:
+        src: /azure/cdn/media/index/cdn.svg
+      title: CDN
 - title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
