--- a/articles/media-services/latest/TOC.yml
+++ b/articles/media-services/latest/TOC.yml
@@ -165,9 +165,14 @@ items:
     - name: Lokal fil som jobbindata – .NET
       displayName: encode, encoding
       href: job-input-from-local-file-how-to.md
-    - name: Använda en anpassad transformering – .NET
-      displayName: encode, encoding, tranform
-      href: customize-encoder-presets-how-to.md
+    - name: Koda med en anpassad transformering
+      items:
+      - name: Med .NET
+        href: customize-encoder-presets-how-to.md
+      - name: Med CLI
+        href: custom-preset-cli-howto.md
+      - name: Med REST
+        href: custom-preset-rest-howto.md
   - name: Använda Event Grid
     items:
     - name: Övervaka händelser – portalen
@@ -250,9 +255,9 @@ items:
     href: frequently-asked-questions.md
   - name: Azure-moln och -regioner
     href: azure-clouds-regions.md
-ms.openlocfilehash: 5a25312b9a66bcde3523735046ed1df6661f7c61
-ms.sourcegitcommit: bd15a37170e57b651c54d8b194e5a99b5bcfb58f
+ms.openlocfilehash: d0c44938110ebb6f823ee61fc8969638fa31b648
+ms.sourcegitcommit: 2d0fb4f3fc8086d61e2d8e506d5c2b930ba525a7
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/07/2019
-ms.locfileid: "57532818"
+ms.lasthandoff: 03/18/2019
+ms.locfileid: "57893126"
