--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -32,16 +32,12 @@ items:
   expanded: true
 - name: Självstudier
   items:
-  - name: Lär dig kognitiva sök-API:er
-    href: cognitive-search-tutorial-blob.md
-  - name: Indexera Azure-blobbar
-    href: search-semi-structured-data.md
   - name: Indexera Azure SQL Database
     href: search-indexer-tutorial.md
-  - name: Lägga till synonymer i .NET
-    href: search-synonyms-tutorial-sdk.md
-  - name: Lägg till automatisk komplettering i .NET
-    href: search-autocomplete-tutorial.md
+  - name: Indexera Azure-blobbar
+    href: search-semi-structured-data.md
+  - name: Indexera med AI (Cognitive Services)
+    href: cognitive-search-tutorial-blob.md
 - name: Exempel
   items:
   - name: Azure-kodexempel
@@ -120,12 +116,18 @@ items:
         href: index-add-language-analyzers.md
       - name: Lägga till ett anpassat analysverktyg
         href: index-add-custom-analyzers.md
-    - name: Lägga till automatiska förslag
-      href: index-add-suggesters.md
-    - name: Lägga till aspektbaserad navigering
-      href: search-faceted-navigation.md
-    - name: Lägga till synonymer
-      href: search-synonyms.md
+    - name: Förifyllning
+      items:
+      - name: Lägga till automatiska förslag
+        href: index-add-suggesters.md
+      - name: Exempel på Komplettera automatiskt
+        href: search-autocomplete-tutorial.md
+    - name: Synonymer
+      items:
+      - name: Lägga till synonymer
+        href: search-synonyms.md
+      - name: Exempel på synonymer
+        href: search-synonyms-tutorial-sdk.md
     - name: Skapa modeller över komplexa datatyper
       href: search-howto-complex-data-types.md
     - name: Modeller med relationsdata
@@ -212,6 +214,8 @@ items:
       href: search-filters.md
     - name: Facet-filter
       href: search-filters-facets.md
+    - name: Lägga till aspektbaserad navigering
+      href: search-faceted-navigation.md
     - name: Filter och OrderBy-uttryckssyntax
       href: query-odata-filter-orderby-syntax.md
   - name: Relevansjustering
@@ -303,9 +307,9 @@ items:
     href: https://azure.microsoft.com/pricing/details/search/
   - name: Videoklipp
     href: https://azure.microsoft.com/resources/videos/index/?services=search
-ms.openlocfilehash: 9127da44295defc522de45eb53ed7e6541287002
-ms.sourcegitcommit: 2d0fb4f3fc8086d61e2d8e506d5c2b930ba525a7
+ms.openlocfilehash: a7b839de360f1c03e5496f058109b6ab239fe9df
+ms.sourcegitcommit: dec7947393fc25c7a8247a35e562362e3600552f
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/18/2019
-ms.locfileid: "57860438"
+ms.lasthandoff: 03/19/2019
+ms.locfileid: "58202783"
