--- a/articles/sql-data-warehouse/TOC.yml
+++ b/articles/sql-data-warehouse/TOC.yml
@@ -64,6 +64,12 @@ items:
       href: quickstart-scale-compute-powershell.md
     - name: T-SQL
       href: quickstart-scale-compute-tsql.md
+  - name: Arbetsbelastningshantering
+    items:
+    - name: Skapa arbetsbelastningsklassificerare (förhandsversion)
+      items:
+      - name: T-SQL
+        href: quickstart-create-a-workload-classifier-tsql.md
   expanded: true
 - name: Begrepp
   items:
@@ -155,6 +161,10 @@ items:
     items:
     - name: Resursklasser för hantering av arbetsbelastningar
       href: resource-classes-for-workload-management.md
+    - name: Arbetsbelastningsklassificering (förhandsversion)
+      href: sql-data-warehouse-workload-classification.md
+    - name: Arbetsbelastningsprioritet (förhandsversion)
+      href: sql-data-warehouse-workload-importance.md
     - name: Minnes- och samtidighetsgränser
       href: memory-and-concurrency-limits.md
   - name: Hantering och övervakning
@@ -169,8 +179,6 @@ items:
       href: backup-and-restore.md
     - name: Rekommendationer
       href: sql-data-warehouse-concept-recommendations.md
-    - name: Underhållsschema
-      href: service-maintenance.md
     - name: Felsöka
       href: sql-data-warehouse-troubleshoot.md
   - name: Underhållsscheman
@@ -311,9 +319,9 @@ items:
       href: sql-data-warehouse-partner-data-integration.md
     - name: Datahantering
       href: sql-data-warehouse-partner-data-management.md
-ms.openlocfilehash: fb1b3751d398af947eb6dad1a40699104280bc21
-ms.sourcegitcommit: 1902adaa68c660bdaac46878ce2dec5473d29275
+ms.openlocfilehash: 70ad58128b088a44f2e95626e6883645a947e629
+ms.sourcegitcommit: 5839af386c5a2ad46aaaeb90a13065ef94e61e74
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/11/2019
-ms.locfileid: "57730666"
+ms.lasthandoff: 03/19/2019
+ms.locfileid: "57884701"
