--- a/articles/sql-database/index.yml
+++ b/articles/sql-database/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: ba32f17ac596a21614c1e18a01f622defb069a8e
-ms.sourcegitcommit: 8b41b86841456deea26b0941e8ae3fcdb2d5c1e1
+ms.openlocfilehash: dad3d16ad6d630bd57e6e5d196d16d45692935d9
+ms.sourcegitcommit: 5839af386c5a2ad46aaaeb90a13065ef94e61e74
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/05/2019
-ms.locfileid: "57338424"
+ms.lasthandoff: 03/19/2019
+ms.locfileid: "58167974"
 documentType: LandingData
 title: Dokumentation om Azure SQL Database
 metadata:
@@ -65,7 +65,7 @@ sections:
         src: media/index/i_elasticpool.svg
       title: Elastiska pooler
     - href: /azure/sql-database/sql-database-managed-instance-index
-      html: <p>Använd Hanterad instans och migrera enkelt dina lokala databaser till den fullständigt hanterade Azure PaaS-databastjänsten med minimala eller inga kodändringar i databasen.</p>
+      html: <p>Med den hanterade instansen får du en fullständigt hanterad SQL Server Database Engine-instans i Azure-molnet. Minimala eller inga ändringar i databaskoden krävs för att migrera från de lokala databaserna.</p>
       image:
         src: media/index/i_mi.svg
       title: Hanterad instans
