--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -15,6 +15,7 @@ items:
   - name: Snabbstarter
     items:
     - name: skapar ett lagringskonto
+      displayName: resource manager, resource manager template, template, ARM
       href: ../common/storage-quickstart-create-account.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
     - name: Hantera blobar utan kod
       items:
@@ -274,8 +275,10 @@ items:
           href: ../common/storage-metrics-migration.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: Lagringsanalys
           href: ../common/storage-analytics.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: Aktivera och visa mått (klassisk)
-          href: ../common/storage-enable-and-view-metrics.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+        - name: Lagringsanalysmått (klassiska)
+          href: ../common/storage-analytics-metrics.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+        - name: Lagringsanalysloggar
+          href: ../common/storage-analytics-logging.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
     - name: Händelsehantering
       href: storage-blob-event-overview.md
     - name: Funktioner för sidblob
@@ -405,17 +408,17 @@ items:
     - name: Node.js
       href: https://docs.microsoft.com/javascript/api/overview/azure/storage
     - name: Ruby
-      href: http://azure.github.io/azure-storage-ruby
+      href: https://azure.github.io/azure-storage-ruby
     - name: PHP
-      href: http://azure.github.io/azure-storage-php/
+      href: https://azure.github.io/azure-storage-php/
     - name: Python
       href: https://docs.microsoft.com/python/api/overview/azure/storage
     - name: C++
-      href: http://azure.github.io/azure-storage-cpp
+      href: https://azure.github.io/azure-storage-cpp
     - name: iOS
-      href: http://azure.github.io/azure-storage-ios/
+      href: https://azure.github.io/azure-storage-ios/
     - name: Android
-      href: http://azure.github.io/azure-storage-android
+      href: https://azure.github.io/azure-storage-android
     - name: REST
       items:
       - name: Blobar, köer, tabeller och filer
@@ -425,6 +428,7 @@ items:
       - name: Import/Export
         href: /rest/api/storageimportexport
     - name: Resource Manager-mall
+      displayName: ARM
       href: /azure/templates/microsoft.storage/allversions
   - name: Resurser
     items:
@@ -439,7 +443,7 @@ items:
     - name: Priskalkylator
       href: https://azure.microsoft.com/pricing/calculator/
     - name: Stack Overflow
-      href: http://stackoverflow.com/questions/tagged/windows-azure-storage
+      href: https://stackoverflow.com/questions/tagged/windows-azure-storage
     - name: Videoklipp
       href: https://azure.microsoft.com/documentation/videos/index/?services=storage
     - name: Azure Lagringsutforskaren
@@ -479,17 +483,17 @@ items:
       - name: Node.js
         href: https://docs.microsoft.com/javascript/api/overview/azure/storage
       - name: Ruby
-        href: http://azure.github.io/azure-storage-ruby
+        href: https://azure.github.io/azure-storage-ruby
       - name: PHP
-        href: http://azure.github.io/azure-storage-php/
+        href: https://azure.github.io/azure-storage-php/
       - name: Python
         href: https://docs.microsoft.com/python/api/overview/azure/storage
       - name: C++
-        href: http://azure.github.io/azure-storage-cpp
+        href: https://azure.github.io/azure-storage-cpp
       - name: iOS
-        href: http://azure.github.io/azure-storage-ios/
+        href: https://azure.github.io/azure-storage-ios/
       - name: Android
-        href: http://azure.github.io/azure-storage-android
+        href: https://azure.github.io/azure-storage-android
       - name: REST
         items:
         - name: Blobar, köer, tabeller och filer
@@ -611,12 +615,12 @@ items:
     - name: Tjänstuppdateringar
       href: https://azure.microsoft.com/updates/?product=storage
     - name: Stack Overflow
-      href: http://stackoverflow.com/questions/tagged/windows-azure-storage
+      href: https://stackoverflow.com/questions/tagged/windows-azure-storage
     - name: Videoklipp
       href: https://azure.microsoft.com/documentation/videos/index/?services=storage
-ms.openlocfilehash: b871bb21667cac76779f32188858b2f2261686c4
-ms.sourcegitcommit: d89b679d20ad45d224fd7d010496c52345f10c96
+ms.openlocfilehash: 919121b1efdb8b1d2d93d3af03dac2927e4208e5
+ms.sourcegitcommit: 2d0fb4f3fc8086d61e2d8e506d5c2b930ba525a7
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/12/2019
-ms.locfileid: "57792216"
+ms.lasthandoff: 03/18/2019
+ms.locfileid: "57875153"
