--- a/articles/storage/queues/TOC.yml
+++ b/articles/storage/queues/TOC.yml
@@ -9,6 +9,7 @@ items:
 - name: Snabbstarter
   items:
   - name: skapar ett lagringskonto
+    displayName: resource manager, resource manager template, template, ARM
     href: ../common/storage-quickstart-create-account.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
   - name: Hantera köer utan kod
     items:
@@ -84,8 +85,10 @@ items:
         href: ../common/storage-metrics-migration.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
       - name: Lagringsanalys
         href: ../common/storage-analytics.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
-      - name: Aktivera och visa mått (klassisk)
-        href: ../common/storage-enable-and-view-metrics.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+      - name: Lagringsanalysmått (klassiska)
+        href: ../common/storage-analytics-metrics.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+      - name: Lagringsanalysloggar
+        href: ../common/storage-analytics-logging.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
 - name: Gör så här för att
   items:
   - name: Lagringskonton
@@ -181,17 +184,17 @@ items:
   - name: Node.js
     href: https://docs.microsoft.com/javascript/api/overview/azure/storage
   - name: Ruby
-    href: http://azure.github.io/azure-storage-ruby
+    href: https://azure.github.io/azure-storage-ruby
   - name: PHP
-    href: http://azure.github.io/azure-storage-php/
+    href: https://azure.github.io/azure-storage-php/
   - name: Python
     href: https://docs.microsoft.com/python/api/overview/azure/storage
   - name: C++
-    href: http://azure.github.io/azure-storage-cpp
+    href: https://azure.github.io/azure-storage-cpp
   - name: iOS
-    href: http://azure.github.io/azure-storage-ios/
+    href: https://azure.github.io/azure-storage-ios/
   - name: Android
-    href: http://azure.github.io/azure-storage-android
+    href: https://azure.github.io/azure-storage-android
   - name: REST
     items:
     - name: Blobar, köer, tabeller och filer
@@ -201,6 +204,7 @@ items:
     - name: Import/Export
       href: /rest/api/storageimportexport
   - name: Resource Manager-mall
+    displayName: ARM
     href: /azure/templates/microsoft.storage/allversions
 - name: Resurser
   items:
@@ -215,7 +219,7 @@ items:
   - name: Priskalkylator
     href: https://azure.microsoft.com/pricing/calculator/
   - name: Stack Overflow
-    href: http://stackoverflow.com/questions/tagged/windows-azure-storage
+    href: https://stackoverflow.com/questions/tagged/windows-azure-storage
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=storage
   - name: Azure Lagringsutforskaren
@@ -247,7 +251,7 @@ items:
       - name: Resursprovider
         href: https://github.com/Azure/azure-sdk-for-net
     - name: Node.js
-      href: http://azure.github.io/azure-storage-node/
+      href: https://azure.github.io/azure-storage-node/
     - name: Java
       href: https://github.com/Azure/azure-storage-java
     - name: C++
@@ -262,9 +266,9 @@ items:
       href: https://github.com/Azure/azure-storage-ios
   - name: Efterlevnadserbjudanden
     href: ../common/storage-compliance-offerings.md
-ms.openlocfilehash: e371fe2d2b2eff9888f53b7417bb02e102970230
-ms.sourcegitcommit: d89b679d20ad45d224fd7d010496c52345f10c96
+ms.openlocfilehash: 068b10b700f4a14eb0665907511ae183a18ced3e
+ms.sourcegitcommit: 2d0fb4f3fc8086d61e2d8e506d5c2b930ba525a7
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/12/2019
-ms.locfileid: "57791264"
+ms.lasthandoff: 03/18/2019
+ms.locfileid: "57904396"
