--- a/articles/cosmos-db/index.yml
+++ b/articles/cosmos-db/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: a94039b70ceb1cffabe90df09282f840f45f7d32
-ms.sourcegitcommit: 8330a262abaddaafd4acb04016b68486fba5835b
+ms.openlocfilehash: 43740118c4379c3b30843575840a000e89cd820b
+ms.sourcegitcommit: ab6fa92977255c5ecbe8a53cac61c2cd2a11601f
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/04/2019
-ms.locfileid: "54033510"
+ms.lasthandoff: 03/20/2019
+ms.locfileid: "58295002"
 documentType: LandingData
 title: Dokumentation om Azure Cosmos DB
 metadata:
@@ -35,11 +35,11 @@ sections:
     columns: 3
     items:
     - href: /azure/cosmos-db/distribute-data-globally/
-      html: <p>Läs mer om global distribution, partitionering, indexering och andra begrepp som gäller för alla Azure Cosmos DB-API:er.</p>
+      html: <p>Läs mer om global distribution, partitionering, etablerat dataflöde, indexering och andra begrepp som gäller för alla API:er för Azure Cosmos DB.</p>
       image:
         src: media/index/azure-cosmos-db-icon.png
       title: Begrepp
-    - href: /azure/cosmos-db/sql-api-introduction/
+    - href: /azure/cosmos-db/sql-api-query-reference/
       html: <p>Använd SQL-API om du skapar en ny databas för icke-relationella dokumentet och vill köra frågor med välbekant SQL-syntax.</p>
       image:
         src: media/index/sql-api.svg
@@ -102,7 +102,7 @@ sections:
       - href: 
       - href: 
       - href: /azure/cosmos-db/create-sql-api-xamarin-dotnet
-    - title: API för Azure Cosmos DB för MongoDB
+    - title: API för MongoDB
       values:
       - href: /azure/cosmos-db/create-mongodb-java
       - href: /azure/cosmos-db/create-mongodb-dotnet
@@ -157,12 +157,12 @@ sections:
     style: cards
     className: cardsFTitle
     items:
-    - title: " Skapa en Azure Cosmos DB-databas i stor skala"
+    - title: " Skapa en Azure Cosmos-databas i stor skala"
       href: /learn/modules/create-cosmos-db-for-scale/
       image:
         src: /learn/achievements/create-cosmos-db-for-scale.svg
         href: /learn/modules/create-cosmos-db-for-scale/
-    - title: Infoga och fråga data i din Azure Cosmos DB-databas
+    - title: Infoga och fråga data i din Azure Cosmos-databas
       href: /learn/modules/access-data-with-cosmos-db-and-sql-api/
       image:
         src: /learn/achievements/access-data-with-cosmos-db-and-sql-api.svg
