--- a/articles/data-explorer/toc.yml
+++ b/articles/data-explorer/toc.yml
@@ -11,6 +11,12 @@ items:
     href: create-cluster-database-portal.md
   - name: Skapa ett kluster – Azure CLI
     href: create-cluster-database-cli.md
+  - name: Skapa ett kluster – PowerShell
+    href: create-cluster-database-powershell.md
+  - name: Skapa ett kluster – C#
+    href: create-cluster-database-csharp.md
+  - name: Skapa ett kluster – Python
+    href: create-cluster-database-python.md
   - name: Mata in data
     items:
     - name: Strömma data – Event Hub
@@ -127,9 +133,9 @@ items:
     href: https://aka.ms/adecostestimator
   - name: Tjänstuppdateringar
     href: https://azure.microsoft.com/updates/?product=data-explorer
-ms.openlocfilehash: 0a81411ee9630eba64d01d02c7ee9b0115943cd5
-ms.sourcegitcommit: bd15a37170e57b651c54d8b194e5a99b5bcfb58f
+ms.openlocfilehash: 485a49d46e76c0e1db7d8d1297e126819ec6cd12
+ms.sourcegitcommit: 8a59b051b283a72765e7d9ac9dd0586f37018d30
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/07/2019
-ms.locfileid: "57538603"
+ms.lasthandoff: 03/20/2019
+ms.locfileid: "58286490"
