--- a/articles/stream-analytics/TOC.yml
+++ b/articles/stream-analytics/TOC.yml
@@ -73,6 +73,8 @@ items:
     items:
     - name: Uppdatera autentiseringsuppgifter
       href: stream-analytics-login-credentials-inputs-outputs.md
+    - name: Konfigurera principer för händelseordning
+      href: event-ordering.md
     - name: Konfigurera varningar
       href: stream-analytics-set-up-alerts.md
     - name: Starta ett jobb
@@ -87,7 +89,7 @@ items:
       href: stream-analytics-job-reliability.md
     - name: Autentisera med hanterad identitet
       href: stream-analytics-managed-identities-adls.md
-    - name: Använda SQL-referens
+    - name: Använda SQL-referensdata
       href: sql-reference-data.md
   - name: Skapa lösningar
     items:
@@ -438,9 +440,9 @@ items:
     href: https://azure.microsoft.com/case-studies/?service=stream-analytics
   - name: Whitepaper-datablad – händelsebearbetning i realtid
     href: stream-analytics-real-time-event-processing-reference-architecture.md
-ms.openlocfilehash: 127d7aa2588a47084dd43eb7f22adf9f73f90dce
-ms.sourcegitcommit: 2d0fb4f3fc8086d61e2d8e506d5c2b930ba525a7
+ms.openlocfilehash: e9ef3d7ed841dd5bb2a9ad21f0dd4f71e528c374
+ms.sourcegitcommit: 8a59b051b283a72765e7d9ac9dd0586f37018d30
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/18/2019
-ms.locfileid: "57853026"
+ms.lasthandoff: 03/20/2019
+ms.locfileid: "58286065"
