--- a/articles/service-fabric-mesh/index.yml
+++ b/articles/service-fabric-mesh/index.yml
@@ -1,24 +1,24 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 029342b5db33a7c713e915ae72066f732b6f46f0
-ms.sourcegitcommit: 1fc949dab883453ac960e02d882e613806fabe6f
+ms.openlocfilehash: eaceb3170e3b3f7bd155f42521102365401f0421
+ms.sourcegitcommit: 02d17ef9aff49423bef5b322a9315f7eab86d8ff
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/03/2018
-ms.locfileid: "50979428"
+ms.lasthandoff: 03/21/2019
+ms.locfileid: "58337459"
 documentType: LandingData
 title: Dokumentation om Azure Service Fabric Mesh
 metadata:
   title: Dokumentation om Azure Service Fabric Mesh – Självstudier, API-referens | Microsoft Doc
   meta.description: Azure Service Fabric Mesh is a fully managed service enabling developers to deploy containerized applications without managing virtual machines, storage, or networking resources. Learn how to use Service Fabric Mesh with our quickstarts and tutorials.
   services: service-fabric-mesh
-  author: rwike77
+  author: dkkapur
   manager: timlt
   ms.service: service-fabric-mesh
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
   ms.date: 07/26/2018
-  ms.author: ryanwi
+  ms.author: dekapur
 abstract:
   description: Azure Service Fabric Mesh är en helt hanterad tjänst som gör det möjligt för utvecklare att skapa och distribuera verksamhetskritiska program utan att behöva hantera någon infrastruktur.  Använd Service Fabric Mesh för att skapa och köra säkra, distribuerade mikrotjänstprogram som kan skalas på begäran. Lär dig att använda Service Fabric Mesh med hjälp av våra snabbstarter och självstudier.  Mer information finns i <a href="/azure/service-fabric-mesh/service-fabric-mesh-overview">översikten över Service Fabric Mesh</a> och <a href="/azure/service-fabric-mesh/service-fabric-mesh-faq">vanliga frågor och svar</a>.
 sections:
